--- a/WebContent/html/googlemaps.html
+++ b/WebContent/html/googlemaps.html
@@ -1,4 +1,3 @@
-<!--Hii-->
 <!DOCTYPE html5>
 <html>
 	<head>
@@ -7,15 +6,28 @@
 		<script src="../js/googlemap_js.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<!--script for the polygon drawing-->
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4s21v6vyCWumMe2aZpJtlbnjaQ0NGUhY&libraries=places,drawing,geometry" type="text/javascript"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5MT-14H4Q2AXrMB4jXA3Am9So6u5p1BE&libraries=places,drawing,geometry" type="text/javascript"></script>
 	</head>
-	<body onload="javascript:onStart();">
+	<body onload="javascript:onStart()">
 		<header>
 			<span>Business Recommender System</span>
 		</header>
-		<span id="mapsearchboxspan">
+		<!--<span id="mapsearchboxspan">
 			<input  type="text" id="mapsearchbox" class="mapsearchbox" placeholder="Enter the Location">
-		</span>
+		</span>*/-->
+		<br><br><br><br><br>
+		<div>
+			<span>Business:</span>
+			<span>
+				<input  type="text" id="searchType" class="mapsearchbox" placeholder="Enter the BUSINESS">
+			</span>
+			<br>
+			<span>Location:</span>
+			<span>
+				<input  type="text" id="searchPlace" class="mapsearchbox" placeholder="Enter the Location">
+			</span>
+			<button type = "button" onclick = "onclickSearchBox()">Search</button>
+		</div>
 		<section id="map" class="map">	</section>
 		<section id="currentaddress"></section>
 		<section id="placeDetails"> </section>
